--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>CarlosZ/payments4j @ GitHub</title>
+	<title>payments4j @ GitHub</title>
 	
 	<style type="text/css">
 		body {
@@ -29,7 +29,19 @@
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
 	</style>
-	
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-20949524-1']);
+    _gaq.push(['_setDomainName', '.github.com']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
 </head>
 
 <body>
@@ -44,8 +56,7 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/CarlosZ/payments4j">payments4j</a>
-      <span class="small">by <a href="http://github.com/CarlosZ">CarlosZ</a></span></h1>
+    <h1><a href="http://github.com/CarlosZ/payments4j">payments4j</a></h1>
 
     <div class="description">
       Java library to integrate to different payment gateways.
@@ -59,11 +70,34 @@
       </ul>
     </p>
     <h2>Authors</h2>
-<p>CarlosZ (carlosluiszuniga [at] gmail.com)<br/></p>
-<h2>Contact</h2>
-<p>CarlosZ (carlosluiszuniga [at] gmail.com)<br/>      </p>
+    <p><a href="http://github.com/CarlosZ">CarlosZ</a> (carlosluiszuniga [at] gmail.com)<br/></p>
+    <h2>Contact</h2>
+    <p><a href="http://github.com/CarlosZ">CarlosZ</a> (carlosluiszuniga [at] gmail.com)<br/>      </p>
 
 
+    <h2>Community</h2>
+    <p>
+    <table border=0 style="background-color: #fff; padding: 5px;" cellspacing=0>
+      <tr><td>
+      <img src="http://groups.google.com/intl/en/images/logos/groups_logo_sm.gif"
+             height=30 width=140 alt="Google Groups">
+      </td></tr>
+      <tr><td style="padding-left: 5px">
+      <b>Subscribe to payments4j</b>
+      </td></tr>
+      <form action="http://groups.google.com/group/payments4j/boxsubscribe">
+      <input type=hidden name="hl" value="en">
+      <tr><td style="padding-left: 5px;">
+      Email: <input type=text name=email>
+      <input type=submit name="sub" value="Subscribe">
+      </td></tr>
+    </form>
+    <tr><td align=right>
+      <a href="http://groups.google.com/group/payments4j?hl=en">Visit this group</a>
+    </td></tr>
+    </table>
+
+    </p>
     <h2>Download</h2>
     <p>
       You can download this project in either
